# translator

./: .gitignore  Cargo.toml  Makefile  README.md  codecov.yml  run  test-coverage-improvement-plan.md
.github/workflows/: ci.yml  rust.yml
src/: clipboard_utils.rs  config.rs  language.rs  lib.rs  main.rs  settings.rs  translation.rs  ui.rs
tests/: config_tests.rs  integration_tests.rs  language_detection_tests.rs  language_selection_tests.rs  run_tests.sh  settings_tests.rs  translation_unit_tests.rs  ui_tests.rs
